Changed error styles to fix spacing

--- a/src/htdocs/css/input/_Location.scss
+++ b/src/htdocs/css/input/_Location.scss
@@ -12,3 +12,7 @@
 .min-max {
   display: inline-block;
 }
+
+.usa-input-error {
+  margin-top: 0em;
+}
